# noir-privacy-examples

./: .env.example  .gitignore  Nargo.toml  README.md
circuits/mint/: Prover.toml
circuits/mint/src/: main.nr
circuits/private_transfer/src/: main.nr
client/: Cargo.toml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: HonkVerifier.sol  PrivateToken.sol
prover-js/: generate-vk.mjs  inspect-proof.mjs  package-lock.json  package.json  prove-onchain.mjs  prove.mjs
prover-rs/: Cargo.toml
prover-rs/src/: main.rs
